# Mylang-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  output.json
AST_Tree/: AST_Node.cpp  AST_Node.hpp  CMakeLists.txt  ExpressionStatement.cpp  ExpressionStatement.hpp  Infix.cpp  Infix.hpp  Integer.cpp  Integer.hpp  Program.cpp  Program.hpp  utils.hpp
docs/: README_en.md
json/: Json.cpp  Json.hpp  Parser.hpp
lexer/: lexer.cpp  lexer.hpp
third_lib/: CMakeLists.txt
token/: Token.cpp  Token.hpp  token.cpp  token.hpp
